--- a/dynamic-datasource-spring-boot-starter/pom.xml
+++ b/dynamic-datasource-spring-boot-starter/pom.xml
@@ -6,10 +6,13 @@
     <parent>
         <groupId>com.baomidou</groupId>
         <artifactId>dynamic-datasource</artifactId>
-        <version>4.0.0</version>
+        <version>4.0.0.B1</version>
     </parent>
 
     <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+    <url>
+        https://github.com/baomidou/dynamic-datasource-spring-boot-starter/tree/master/dynamic-datasource-spring-boot-starter
+    </url>
 
     <dependencies>
         <dependency>
