--- a/dynamic-datasource-spring/pom.xml
+++ b/dynamic-datasource-spring/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.baomidou</groupId>
         <artifactId>dynamic-datasource</artifactId>
-        <version>4.0.0.B1</version>
+        <version>4.0.0-B1</version>
     </parent>
     <artifactId>dynamic-datasource-spring</artifactId>
     <url>https://github.com/baomidou/dynamic-datasource-spring-boot-starter/tree/master/dynamic-datasource-spring</url>
